--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения</p>
+    <header>  
+      <nav>
+       
+        <ul>
+         <li><a href="##">студия</a></li>
+         <li><a href="##">клиенты</a></li>
+         <li><a href="##">магазин</a></li>
+         <li><a href="##">контанты</a></li>
+        </ul>
+        <a href="##">корзина</a> 
+      </nav>
+    </header>
 
   </body>
 </html>
