--- a/index.html
+++ b/index.html
@@ -7,16 +7,49 @@
   <body>
     <header>  
       <nav>
-       
+        <a>
+          <img src="https://via.placeholder.com"  alt="Логотип Нердс»">
+        </a>
         <ul>
-         <li><a href="##">студия</a></li>
-         <li><a href="##">клиенты</a></li>
-         <li><a href="##">магазин</a></li>
-         <li><a href="##">контанты</a></li>
+         <li><a href="blank.html">студия</a></li>
+         <li><a href="blank.html">клиенты</a></li>
+         <li><a href="blank.html">магазин</a></li>
+         <li><a href="blank.html">контанты</a></li>
         </ul>
-        <a href="##">корзина</a> 
+        <a href="#">корзина</a> 
       </nav>
     </header>
+    <main>
+      <section></section>
+       <h1>Долго, Дорого, скрупулёзно.</h1>
+       <p>Математически выверенный дизайн <br> для вашего сайта или мобильного приложения</br></p>
+      <button type="button">Узнать больше</button>
+    </section>
+    <section>
+      <ol>
+        <li>
+          <h3>Веб-сайты</h3>
+          <p>Мир никогда не будет прежним<br>после того как увидишь наш сайт</p>
+          <button type="button">Заказать</button>
+        </li>
+        <li>
+          <h3>Приложения</h3>
+          <p>поеорите топ-10 приложений в <br>App store и Google play</p>
+          <button type="button">Заказать</button>
+        </li>
+        <li>
+          <h3>Презентации</h3>
+          <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
+          <button type="button">Заказать</button>
+        </li>
+
+      </ol>
+
+
+    </section>
+
+    </main>
+
 
   </body>
 </html>
