Заказы на разработку

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <main>
-      <section></section>
+      <section>
        <h1>Долго, Дорого, скрупулёзно.</h1>
        <p>Математически выверенный дизайн <br> для вашего сайта или мобильного приложения</br></p>
       <button type="button">Узнать больше</button>
@@ -42,14 +42,20 @@
           <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
           <button type="button">Заказать</button>
         </li>
-
       </ol>
-
-
+    </section>
+    <section>
+      <h2>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h2>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
+      <h4>Выполнем заказы на разаработку:</h4>
+       <ol>
+         <li>Веб-сайтов любой сложности</li>
+         <li>Мобильных предложений для IOS и Android</li>
+         <li>Слайдшоу и видео для корпоративных презентаци</li>
+       </ol>
     </section>
 
-    </main>
-
+  </main>
 
   </body>
 </html>
