--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <body>
     <header>  
       <nav>
-        <a>
-          <img src="https://via.placeholder.com"  alt="Логотип Нердс»">
-        </a>
         <ul>
          <li><a href="blank.html">студия</a></li>
          <li><a href="blank.html">клиенты</a></li>
@@ -20,24 +17,26 @@
       </nav>
     </header>
     <main>
-      <section>
-       <h1>Долго, Дорого, скрупулёзно.</h1>
+      <h1>Долго, Дорого, скрупулёзно.</h1>
        <p>Математически выверенный дизайн <br> для вашего сайта или мобильного приложения</br></p>
       <button type="button">Узнать больше</button>
-    </section>
+      <img src="https://via.placeholder.com/760x431" width="760" height="431">
     <section>
       <ol>
         <li>
+          <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним<br>после того как увидишь наш сайт</p>
           <button type="button">Заказать</button>
         </li>
         <li>
+          <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
           <h3>Приложения</h3>
           <p>поеорите топ-10 приложений в <br>App store и Google play</p>
           <button type="button">Заказать</button>
         </li>
         <li>
+          <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Презентации">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
           <button type="button">Заказать</button>
@@ -47,14 +46,30 @@
     <section>
       <h2>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h2>
       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
-      <h4>Выполнем заказы на разаработку:</h4>
+      <h3>Выполнем заказы на разаработку:</h3>
        <ol>
          <li>Веб-сайтов любой сложности</li>
          <li>Мобильных предложений для IOS и Android</li>
          <li>Слайдшоу и видео для корпоративных презентаци</li>
        </ol>
     </section>
-
+    <aside>
+      <img src="https://via.placeholder.com/300x146" width="360" height="208"></aside>
+      <h3>с 2004 года Любим точность во всем:</h3>
+      <ol>
+        <li>
+         <h2>146%</h2>
+         <p>Уровень самоотдачи</p>
+        </li>
+        <li>
+          <h2>100%</h2>
+          <p>соблюдение сроков</p>
+        </li>
+        <li>
+          <h2>50%</h2>
+          <p>Минимальная предоплата</p>
+        </li>
+      </ol>
   </main>
 
   </body>
