--- a/index.html
+++ b/index.html
@@ -17,46 +17,47 @@
       </nav>
     </header>
     <main>
-      <h1>Долго, Дорого, скрупулёзно.</h1>
-       <p>Математически выверенный дизайн <br> для вашего сайта или мобильного приложения</br></p>
+      <h1></h1>
+      <h2>Долго, Дорого, скрупулёзно.</h1>
+       <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
       <button type="button">Узнать больше</button>
       <img src="https://via.placeholder.com/760x431" width="760" height="431">
     <section>
-      <ol>
+      <ul>
         <li>
           <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
           <h3>Веб-сайты</h3>
-          <p>Мир никогда не будет прежним<br>после того как увидишь наш сайт</p>
+          <p>Мир никогда не будет прежним после того как увидишь наш сайт</p>
           <button type="button">Заказать</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
           <h3>Приложения</h3>
-          <p>поеорите топ-10 приложений в <br>App store и Google play</p>
+          <p>поеорите топ-10 приложений в App store и Google play</p>
           <button type="button">Заказать</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Презентации">
           <h3>Презентации</h3>
-          <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
+          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <button type="button">Заказать</button>
         </li>
-      </ol>
+      </ul>
     </section>
     <section>
       <h2>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h2>
       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
       <h3>Выполнем заказы на разаработку:</h3>
-       <ol>
+       <ul>
          <li>Веб-сайтов любой сложности</li>
          <li>Мобильных предложений для IOS и Android</li>
          <li>Слайдшоу и видео для корпоративных презентаци</li>
-       </ol>
+       </ul>
     </section>
     <aside>
-      <img src="https://via.placeholder.com/300x146" width="360" height="208"></aside>
+      <img src="https://via.placeholder.com/300x146" width="360" height="208">
       <h3>с 2004 года Любим точность во всем:</h3>
-      <ol>
+      <ul>
         <li>
          <h2>146%</h2>
          <p>Уровень самоотдачи</p>
@@ -69,7 +70,16 @@
           <h2>50%</h2>
           <p>Минимальная предоплата</p>
         </li>
-      </ol>
+      </ul>
+    </aside>
+    <section>
+     <ul>
+       <li><img src="https://via.placeholder.com/199x67.82" width="199" height="67.82"></li>
+       <li><img src="https://via.placeholder.com/209x90" width="209" height="90"></li>
+       <li><img src="https://via.placeholder.com/185x52" width="185" height="52"></li>
+       <li><img src="https://via.placeholder.com/173x84" width="173" height="84"></li>
+     </ul>
+    </section>
   </main>
 
   </body>
