--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <button type="button">Узнать больше</button>
       <img src="https://via.placeholder.com/760x431" width="760" height="431">
     <section>
+      <h2>Услуги</h2>
       <ul>
         <li>
           <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
@@ -55,6 +56,7 @@
        </ul>
     </section>
     <aside>
+      <h2>Достижения</h2>
       <img src="https://via.placeholder.com/300x146" width="360" height="208">
       <h3>с 2004 года Любим точность во всем:</h3>
       <ul>
@@ -81,6 +83,13 @@
      </ul>
     </section>
   </main>
-
+<footer>
+  <img src="https://via.placeholder.com/1440x416" alt="карта">
+  <h2>NЁRDS DESIGN STUDIO</h2>
+  <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
+  <button type="button">Напишите нам</button>
+ <p>Давайти дружить, это выгодно!</p>
+ <p>скидка 10% для друзей из социальных сетей</p>
+</footer>
   </body>
 </html>
