--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <header>  
       <nav>
+        <h1>Nerds</h1>
         <ul>
          <li><a href="blank.html">студия</a></li>
          <li><a href="blank.html">клиенты</a></li>
@@ -17,8 +18,7 @@
       </nav>
     </header>
     <main>
-      <h1></h1>
-      <h2>Долго, Дорого, скрупулёзно.</h1>
+      <h1>Долго, Дорого, скрупулёзно.</h1>
        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
       <button type="button">Узнать больше</button>
       <img src="https://via.placeholder.com/760x431" width="760" height="431">
