--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <h2>NЁRDS DESIGN STUDIO</h2>
   <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
   <button type="button">Напишите нам</button>
- <p>Давайти дружить, это выгодно!</p>
+ <strong>Давайти дружить, это выгодно!</strong>
  <p>скидка 10% для друзей из социальных сетей</p>
 </footer>
   </body>
