--- a/2page.html
+++ b/2page.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>нёрдс</title>
+    <title>нёрдс - Магазин готовых шаблонов</title>
   </head>
   <body>
     <header>  
@@ -11,19 +11,62 @@
         <ul>
          <li><a href="blank.html">студия</a></li>
          <li><a href="blank.html">клиенты</a></li>
-         <li><a href="blank.html">магазин</a></li>
+         <li>магазин</li>
          <li><a href="blank.html">контанты</a></li>
         </ul>
         <a href="#">корзина</a> 
       </nav>
     </header>
-    <footer>
-     <img src="https://via.placeholder.com/1440x416" alt="карта">
-     <h2>NЁRDS DESIGN STUDIO</h2>
-     <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
-     <button type="button">Напишите нам</button>
-     <p>Давайти дружить, это выгодно!</p>
-     <p>скидка 10% для друзей из социальных сетей</p>
-     </footer>
+   <main>
+     <h1>Магазин готовых шаблонов</h1>
+     <section>
+       <h2>Фильтр товаров</h2>
+     </section>
+     
+     <section>
+       <h2>список шаблонов</h2>
+       <ul>
+         <li>
+           <a href="product.html">
+             <h3>Седона</h3>
+             <p>Информационный сайт для туристов</p>
+             <img src="https://via.placeholder.com/360x576" width="360" height="576">
+           </a>
+           <button type="button">9 900</button>
+         </li>
+         <li>
+           <a href="product.html">
+             <h3>pink</h3>
+             <img src="https://via.placeholder.com/360x576" width="360" height="576">
+           </a>
+         </li>
+         <li>
+           <a href="product.html">
+             <h3>borodinsky</h3>
+             <img src="https://via.placeholder.com/364x582" width="364" height="582">
+           </a>
+        </li>
+        <li>
+           <a href="product.html">
+             <h3>mishka</h3>
+             <img src="https://via.placeholder.com/362x580" width="362" height="580">
+           </a>
+        </li>
+         <a href="product.html">
+           <h3>aplus</h3>
+           <img src="https://via.placeholder.com/364x582" width="364" height="582">
+         </a>
+        </li>
+        <li>
+          <a href="product.html">
+            <h3>kvast</h3>
+            <img src="https://via.placeholder.com/362x580" width="362" height="580">
+          </a>
+       </li>
+       </ul>
+     </section>
+
+   </main>
+    
   </body>
 </html>
