--- a/2page.html
+++ b/2page.html
@@ -11,7 +11,7 @@
         <ul>
          <li><a href="blank.html">студия</a></li>
          <li><a href="blank.html">клиенты</a></li>
-         <li>магазин</li>
+         <li><a>магазин</a></li>
          <li><a href="blank.html">контанты</a></li>
         </ul>
         <a href="#">корзина</a> 
@@ -65,8 +65,29 @@
        </li>
        </ul>
      </section>
-
+     <ul>
+      <li>
+        <a href="#">1</a>
+      </li>
+      <li>
+        <a>2</a>
+      </li>
+      <li>
+        <a href="#">3</a>
+      </li>
+      <li>
+        <a href="#">следующая</a>
+      </li>
+     </ul> 
    </main>
+   <footer>
+    <img src="https://via.placeholder.com/1440x416" alt="карта">
+    <h2>NЁRDS DESIGN STUDIO</h2>
+    <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
+    <button type="button">Напишите нам</button>
+   <strong>Давайти дружить, это выгодно!</strong>
+   <p>скидка 10% для друзей из социальных сетей</p>
+  </footer>
     
   </body>
 </html>
