--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <body>
     <header>  
       <nav>
-        <h1>Nerds</h1>
+        Nerds
         <ul>
          <li><a href="blank.html">студия</a></li>
          <li><a href="blank.html">клиенты</a></li>
@@ -18,78 +18,89 @@
       </nav>
     </header>
     <main>
-      <h1>Долго, Дорого, скрупулёзно.</h1>
+      <h>Долго, Дорого, скрупулёзно.</h>
       <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
       <button type="button">Узнать больше</button>
       <img src="https://via.placeholder.com/760x431" width="760" height="431">
-    <section>
-      <h2>Услуги</h2>
-      <ul>
-        <li>
-          <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
-          <h3>Веб-сайты</h3>
-          <p>Мир никогда не будет прежним после того как увидишь наш сайт</p>
-          <button type="button">Заказать</button>
-        </li>
-        <li>
-          <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
-          <h3>Приложения</h3>
-          <p>поеорите топ-10 приложений в App store и Google play</p>
-          <button type="button">Заказать</button>
-        </li>
-        <li>
-          <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Презентации">
-          <h3>Презентации</h3>
-          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <button type="button">Заказать</button>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h2>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
-      <h3>Выполнем заказы на разаработку:</h3>
+      <section>
+       <h2>Услуги</h2>
+       <ul>
+         <li>
+           <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
+           <h3>Веб-сайты</h3>
+           <p>Мир никогда не будет прежним после того как увидишь наш сайт</p>
+           <button type="button">Заказать</button>
+         </li>
+         <li>
+           <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
+           <h3>Приложения</h3>
+           <p>поеорите топ-10 приложений в App store и Google play</p>
+           <button type="button">Заказать</button>
+         </li>
+         <li>
+           <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Презентации">
+           <h3>Презентации</h3>
+           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+           <button type="button">Заказать</button>
+         </li>
+       </ul>
+      </section>
+      <section>
+       <h1>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h1>
+       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
+       <p>Выполнем заказы на разаработку:</p>
        <ul>
          <li>Веб-сайтов любой сложности</li>
          <li>Мобильных предложений для IOS и Android</li>
          <li>Слайдшоу и видео для корпоративных презентаци</li>
        </ul>
-   </section>
-    <aside>
-      <h2>Достижения</h2>
-      <img src="https://via.placeholder.com/300x146" width="360" height="208">
-      <h3>с 2004 года Любим точность во всем:</h3>
-      <ul>
-        <li>
-         <h2>146%</h2>
-         <p>Уровень самоотдачи</p>
-        </li>
-        <li>
-          <h2>100%</h2>
-          <p>соблюдение сроков</p>
-        </li>
-        <li>
+      </section>
+      <aside>
+       <h2>Достижения</h2>
+       <img src="https://via.placeholder.com/300x146" width="360" height="208" alt="nerds">
+       <h3>с 2004 года Любим точность во всем:</h3>
+       <ul>
+         <li>
+           <p>146%</p>
+           <h3>Уровень самоотдачи</h3>
+         </li>
+         <li>
+          <p>100%</p>
+          <h3>соблюдение сроков</h3>
+         </li>
+         <li>
           <h2>50%</h2>
           <p>Минимальная предоплата</p>
-        </li>
-      </ul>
-    </aside>
-    <section>
-     <ul>
-       <li><img src="https://via.placeholder.com/199x67.82" width="199" height="67.82"></li>
-       <li><img src="https://via.placeholder.com/209x90" width="209" height="90"></li>
-       <li><img src="https://via.placeholder.com/185x52" width="185" height="52"></li>
-       <li><img src="https://via.placeholder.com/173x84" width="173" height="84"></li>
-     </ul>
-   </section>
-   </main> 
-   <footer>
+         </li>
+       </ul>
+      </aside>
+      <section>
+       <ul>
+         <li> <img src="https://via.placeholder.com/199x67.82" width="199" height="67.82" alt="htmlacademy"></li>
+         <li> <img src="https://via.placeholder.com/209x90" width="209" height="90" alt="borodinsky"></li>
+         <li> <img src="https://via.placeholder.com/185x52" width="185" height="52" alt="pink"></li>
+         <li> <img src="https://via.placeholder.com/173x84" width="173" height="84" alt="mishka"></li>
+       </ul>
+      </section>
+    </main> 
+    <footer>
      <img src="https://via.placeholder.com/1440x416" alt="карта">
-     <h2>NЁRDS DESIGN STUDIO</h2>
-     <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
-     <button type="button">Напишите нам</button>
-     <strong>Давайти дружить, это выгодно!</strong>
-     <p>скидка 10% для друзей из социальных сетей</p>
+     <div>
+       <h2>NЁRDS DESIGN STUDIO</h2>
+       <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
+       <button type="button">Напишите нам</button>
+     </div>
+     <div>
+       <ul>
+         <li><a href=""></a>Вконтакте</li>
+         <li><a href=""></a>Facebook</li>
+         <li><a href=""></a>инстаграм</li>
+       </ul>
+     </div>
+     <div>
+       <strong>Давайти дружить, это выгодно!</strong>
+       <p>скидка 10% для друзей из социальных сетей</p>
+    </div>
    </footer>
- </body>
+  </body>
 </html>
