--- a/index.html
+++ b/index.html
@@ -18,10 +18,22 @@
       </nav>
     </header>
     <main>
-      <h>Долго, Дорого, скрупулёзно.</h>
-      <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-      <button type="button">Узнать больше</button>
-      <img src="https://via.placeholder.com/760x431" width="760" height="431">
+      <section>
+        <ul>
+          <li>
+           <h2>Долго, Дорого, скрупулёзно.</h2>
+           <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+            <button type="button">Узнать больше</button>
+           <img src="https://via.placeholder.com/760x431" width="760" height="431">
+          </li>
+          <li>
+
+          </li>
+          <li>
+            
+          </li>
+       </ul>
+      </section>
       <section>
        <h2>Услуги</h2>
        <ul>
