изменения на 2 странице

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>нёрдс</title>
   </head>
  <body>
-    <header>  
+    <header>
       <nav>
         Nerds
         <ul>
@@ -14,7 +14,7 @@
          <li><a href="blank.html">магазин</a></li>
          <li><a href="blank.html">контанты</a></li>
         </ul>
-        <a href="#">корзина</a> 
+        <a href="#">корзина</a>
       </nav>
     </header>
     <main>
@@ -30,7 +30,7 @@
 
           </li>
           <li>
-            
+
           </li>
        </ul>
       </section>
@@ -81,8 +81,8 @@
           <h3>соблюдение сроков</h3>
          </li>
          <li>
-          <h2>50%</h2>
-          <p>Минимальная предоплата</p>
+          <p>50%</p>
+          <h3>Минимальная предоплата</h3>
          </li>
        </ul>
       </aside>
@@ -94,7 +94,7 @@
          <li> <img src="https://via.placeholder.com/173x84" width="173" height="84" alt="mishka"></li>
        </ul>
       </section>
-    </main> 
+    </main>
     <footer>
      <img src="https://via.placeholder.com/1440x416" alt="карта">
      <div>
