--- a/2page.html
+++ b/2page.html
@@ -21,51 +21,33 @@
      <h1>Магазин готовых шаблонов</h1>
      <section>
        <h2>Фильтр товаров</h2>
-       <!-- Здесь будет форма фильтра -->
      </section>
      
      <section>
        <h2>список шаблонов</h2>
        <ul>
          <li>
-           <a href="product.html">
-             <h3>Седона</h3>
-             <p>Информационный сайт для туристов</p>
              <img src="https://via.placeholder.com/360x576" width="360" height="576" alt="sedona">
-           </a>
-           <p>
-             <button type="button">9 900</button>
-           </p>
+             <div>
+               <h3><a href="#">Седона</a></h3>
+               <p>Информационный сайт для туристов</p>
+               <button type="button">9 900</button>
+             </div>
          </li>
          <li>
-           <a href="product.html">
-             <h3>pink</h3>
              <img src="https://via.placeholder.com/360x576" width="360" height="576" alt="pink">
-           </a>
          </li>
          <li>
-           <a href="product.html">
-             <h3>borodinsky</h3>
              <img src="https://via.placeholder.com/364x582" width="364" height="582" alt="borodinsky">
-           </a>
         </li>
         <li>
-           <a href="product.html">
-             <h3>mishka</h3>
              <img src="https://via.placeholder.com/362x580" width="362" height="580" alt="mishka">
-           </a>
         </li>
-         <a href="product.html">
-           <h3>aplus</h3>
            <img src="https://via.placeholder.com/364x582" width="364" height="582" alt="aplus">
-         </a>
         </li>
         <li>
-          <a href="product.html">
-            <h3>kvast</h3>
-            <img src="https://via.placeholder.com/362x580" width="362" height="580" alt="kvast">
-          </a>
-       </li>
+          <img src="https://via.placeholder.com/362x580" width="362" height="580" alt="kvast">
+        </li>
        </ul>
      
   
@@ -96,7 +78,9 @@
       </div>
       <div>
         <ul>
-          <li><a href=""></a></li>
+          <li><a href=""></a>Вконтакте</li>
+          <li><a href=""></a>Facebook</li>
+          <li><a href=""></a>инстаграм</li>
         </ul>
       </div>
       <div>
