желательно последние правки

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
  <body>
     <header>
       <nav>
-        Nerds
+        <a href="blank.html">Nerds</a>
         <ul>
-         <li><a href="blank.html">студия</a></li>
-         <li><a href="blank.html">клиенты</a></li>
-         <li><a href="blank.html">магазин</a></li>
-         <li><a href="blank.html">контанты</a></li>
+         <li><a href="#">студия</a></li>
+         <li><a href="#">клиенты</a></li>
+         <li><a href="#">магазин</a></li>
+         <li><a href="#">контанты</a></li>
         </ul>
         <a href="#">корзина</a>
       </nav>
     </header>
     <main>
       <section>
+        <!-- слайды -->
         <ul>
           <li>
            <h2>Долго, Дорого, скрупулёзно.</h2>
