--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
       </nav>
     </header>
     <main>
+      <h1>Дизайн студия Nerds</h1>
       <section>
-        <!-- слайды -->
+        <h2>Узнать больше</h2>
         <ul>
           <li>
-           <h2>Долго, Дорого, скрупулёзно.</h2>
+           <h3>Долго, Дорого, скрупулёзно.</h3>
            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-            <button type="button">Узнать больше</button>
-           <img src="https://via.placeholder.com/760x431" width="760" height="431">
+            <button type="button"><a>Узнать больше</a></button>
+           <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="Долго, Дорого, скрупулёзно">
           </li>
           <li>
 
@@ -59,7 +60,7 @@
        </ul>
       </section>
       <section>
-       <h1>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h1>
+       <h2>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h2>
        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
        <p>Выполнем заказы на разаработку:</p>
        <ul>
@@ -88,8 +89,9 @@
        </ul>
       </aside>
       <section>
+       <h2>Спонсоры</h2>
        <ul>
-         <li> <img src="https://via.placeholder.com/199x67.82" width="199" height="67.82" alt="htmlacademy"></li>
+         <li><img src="https://via.placeholder.com/199x68" width="199" height="68" alt="html academy"></li>
          <li> <img src="https://via.placeholder.com/209x90" width="209" height="90" alt="borodinsky"></li>
          <li> <img src="https://via.placeholder.com/185x52" width="185" height="52" alt="pink"></li>
          <li> <img src="https://via.placeholder.com/173x84" width="173" height="84" alt="mishka"></li>
