--- a/index.html
+++ b/index.html
@@ -99,19 +99,20 @@
       </section>
     </main>
     <footer>
-     <img src="https://via.placeholder.com/1440x416" alt="карта">
-     <div>
-       <h2>NЁRDS DESIGN STUDIO</h2>
-       <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
-       <button type="button">Напишите нам</button>
-     </div>
-     <div>
-       <ul>
-         <li><a href=""></a>Вконтакте</li>
-         <li><a href=""></a>Facebook</li>
-         <li><a href=""></a>инстаграм</li>
-       </ul>
-     </div>
+      <section>
+        <h2>Как нас найти</h2>
+        <img src="https://via.placeholder.com/1440x416" alt="карта">
+        <div>
+            <h2>NЁRDS DESIGN STUDIO</h2>
+            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
+            <button type="button">Напишите нам</button>
+        </div>
+      </section>
+      <ul>
+          <li><a href=""></a>Вконтакте</li>
+          <li><a href=""></a>Facebook</li>
+          <li><a href=""></a>инстаграм</li>
+      </ul>
      <div>
        <strong>Давайти дружить, это выгодно!</strong>
        <p>скидка 10% для друзей из социальных сетей</p>
