--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>нёрдс</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
  <body>
-    <header >
+    <header>
       <nav class="navigation">
         <a href="blank.html" class="header-logo">Nerds</a>
         <ul class="site-navigation">
@@ -21,13 +21,13 @@
     </header>
     <main>
       <h1>Дизайн студия Nerds</h1>
-      <section  class="slide">
+      <section class="slide">
         <h2>Узнать больше</h2>
         <ul>
           <li>
            <h3>Долго, Дорого, скрупулёзно.</h3>
            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-            <button type="button" ><a>Узнать больше</a></button>
+            <button type="button"><a>Узнать больше</a></button>
            <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="Долго, Дорого, скрупулёзно">
           </li>
           <li>
@@ -38,24 +38,25 @@
           </li>
        </ul>
       </section>
+
       <section class="services">
        <h2>Услуги</h2>
        <ul>
-         <li class="servises-item">
+         <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
-           <h3 class="web">Веб-сайты</h3>
+           <h3>Веб-сайты</h3>
            <p>Мир никогда не будет прежним после того как увидишь наш сайт</p>
            <button type="button" class="btn1">Заказать</button>
          </li>
-         <li class="servises-item">
+         <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
-           <h3 class="app">Приложения</h3>
+           <h3>Приложения</h3>
            <p>поеорите топ-10 приложений в App store и Google play</p>
            <button type="button"class="btn2">Заказать</button>
          </li>
-         <li class="servises-item"class="servises-item">
+         <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Презентации">
-           <h3 class="presentation">Презентации</h3>
+           <h3 >Презентации</h3>
            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
            <button type="button"class="btn3">Заказать</button>
          </li>
