--- a/2page.html
+++ b/2page.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>нёрдс - Магазин готовых шаблонов</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header>
