почти конец стилизации оснвной страницы

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
  <body>
-    <header>
+    <header class="body-header">
       <nav class="navigation">
         <a href="blank.html" class="header-logo">Nerds</a>
         <ul class="site-navigation">
@@ -21,7 +21,7 @@
     </header>
     <main>
       <h1>Дизайн студия Nerds</h1>
-      <section class="slide">
+       <section class="slide">
         <h2>Узнать больше</h2>
         <ul>
           <li>
@@ -67,25 +67,25 @@
        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
        <p>Выполнем заказы на разаработку:</p>
        <ul>
-         <li>Веб-сайтов любой сложности</li>
-         <li>Мобильных предложений для IOS и Android</li>
-         <li>Слайдшоу и видео для корпоративных презентаци</li>
+         <li class="inf-list">Веб-сайтов любой сложности</li>
+         <li class="inf-list">Мобильных предложений для IOS и Android</li>
+         <li class="inf-list">Слайдшоу и видео для корпоративных презентаци</li>
        </ul>
       </section>
       <aside>
-       <h2>Достижения</h2>
+       <h2 class="achievement">Достижения</h2>
        <img src="https://via.placeholder.com/300x146" width="360" height="208" alt="nerds">
        <h3>с 2004 года Любим точность во всем:</h3>
        <ul>
-         <li>
+         <li class="achievement-list">
            <p>146%</p>
            <h3>Уровень самоотдачи</h3>
          </li>
-         <li>
+         <li class="achievement-list">
           <p>100%</p>
           <h3>соблюдение сроков</h3>
          </li>
-         <li>
+         <li class="achievement-list">
           <p>50%</p>
           <h3>Минимальная предоплата</h3>
          </li>
@@ -105,9 +105,9 @@
       <section>
         <h2>Как нас найти</h2>
         <img src="https://via.placeholder.com/1440x416" alt="карта">
-        <div>
+        <div class="map-adds">
             <h2>NЁRDS DESIGN STUDIO</h2>
-            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
+            <p>191186, Санкт-Петербург, ул. Б. <br>Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
             <button type="button">Напишите нам</button>
         </div>
       </section>
