--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </section>
       <section class="information">
        <h2>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h2>
-       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
+       <p class="p-b">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
        <p>Выполнем заказы на разаработку:</p>
        <ul>
          <li class="inf-list">Веб-сайтов любой сложности</li>
@@ -107,7 +107,7 @@
         <img src="https://via.placeholder.com/1440x416" alt="карта">
         <div class="map-adds">
             <h2>NЁRDS DESIGN STUDIO</h2>
-            <p>191186, Санкт-Петербург, ул. Б. <br>Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
+            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>тел. +7 (812) 275-75-75</p>
             <button type="button">Напишите нам</button>
         </div>
       </section>
