--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>нёрдс</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
  <body>
-    <header class="body-header">
-      <nav class="navigation">
+    <header>
+      <nav>
         <a href="blank.html" class="header-logo">Nerds</a>
-        <ul class="site-navigation">
-         <li><a href="#">студия</a></li>
-         <li><a href="#">клиенты</a></li>
-         <li><a href="#">магазин</a></li>
-         <li><a href="#">контанты</a></li>
+        <ul class="main-navigation">
+         <li class="nav-list"><a href="#">студия</a></li>
+         <li class="nav-list"><a href="#">клиенты</a></li>
+         <li class="nav-list"><a href="2page.html">магазин</a></li>
+         <li class="nav-list"><a href="#">контанты</a></li>
         </ul>
-        <a href="#" class="basket">корзина</a>
+        <a href="#" class="nav-list">корзина</a>
       </nav>
     </header>
     <main>
@@ -27,7 +27,7 @@
           <li>
            <h3>Долго, Дорого, скрупулёзно.</h3>
            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-            <button type="button"><a>Узнать больше</a></button>
+            <a>Узнать больше</a>
            <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="Долго, Дорого, скрупулёзно">
           </li>
           <li>
@@ -46,19 +46,19 @@
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
            <h3>Веб-сайты</h3>
            <p>Мир никогда не будет прежним после того как увидишь наш сайт</p>
-           <button type="button" class="btn1">Заказать</button>
+           <a class="btn1">Заказать</a>
          </li>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
            <h3>Приложения</h3>
            <p>поеорите топ-10 приложений в App store и Google play</p>
-           <button type="button"class="btn2">Заказать</button>
+           <a class="btn2">Заказать</a>
          </li>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Презентации">
            <h3 >Презентации</h3>
            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-           <button type="button"class="btn3">Заказать</button>
+           <a class="btn3">Заказать</a>
          </li>
        </ul>
       </section>
