--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
  <body>
     <header>
       <nav>
-        <a href="blank.html" class="header-logo">Nerds</a>
+        <a hidden="true" href="blank.html" class="header-logo">Nerds</a>
         <ul class="main-navigation">
-         <li class="nav-list"><a href="#">студия</a></li>
-         <li class="nav-list"><a href="#">клиенты</a></li>
-         <li class="nav-list"><a href="2page.html">магазин</a></li>
-         <li class="nav-list"><a href="#">контанты</a></li>
+         <li"><a class="nav-list" href="#">студия</a></li>
+         <li><a class="nav-list" href="#">клиенты</a></li>
+         <li><a class="nav-list" href="2page.html">магазин</a></li>
+         <li><a class="nav-list" href="#">контанты</a></li>
+         <li class="busket"><a href="#" class="nav-list">корзина</a></li>
         </ul>
-        <a href="#" class="nav-list">корзина</a>
       </nav>
     </header>
     <main>
-      <h1>Дизайн студия Nerds</h1>
+      <h1 hidden="true">Дизайн студия Nerds</h1>
        <section class="slide">
         <h2>Узнать больше</h2>
         <ul>
@@ -40,25 +40,25 @@
       </section>
 
       <section class="services">
-       <h2>Услуги</h2>
+       <h2 hidden="true">Услуги</h2>
        <ul>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
            <h3>Веб-сайты</h3>
            <p>Мир никогда не будет прежним после того как увидишь наш сайт</p>
-           <a class="btn1">Заказать</a>
+           <a class="a-btn btn1" href="#">Заказать</a>
          </li>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
            <h3>Приложения</h3>
            <p>поеорите топ-10 приложений в App store и Google play</p>
-           <a class="btn2">Заказать</a>
+           <a class="a-btn btn2" href="#">Заказать</a>
          </li>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Презентации">
            <h3 >Презентации</h3>
            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-           <a class="btn3">Заказать</a>
+           <a class="a-btn btn3" href="#">Заказать</a>
          </li>
        </ul>
       </section>
@@ -72,8 +72,8 @@
          <li class="inf-list">Слайдшоу и видео для корпоративных презентаци</li>
        </ul>
       </section>
-      <aside>
-       <h2 class="achievement">Достижения</h2>
+      <aside class="achievement">
+       <h2 hidden="true"> Достижения </h2>
        <img src="https://via.placeholder.com/300x146" width="360" height="208" alt="nerds">
        <h3>с 2004 года Любим точность во всем:</h3>
        <ul>
@@ -92,7 +92,7 @@
        </ul>
       </aside>
       <section>
-       <h2>Спонсоры</h2>
+       <h2 hidden="true">Спонсоры</h2>
        <ul>
          <li><img src="https://via.placeholder.com/199x68" width="199" height="68" alt="html academy"></li>
          <li> <img src="https://via.placeholder.com/209x90" width="209" height="90" alt="borodinsky"></li>
@@ -103,7 +103,7 @@
     </main>
     <footer>
       <section>
-        <h2>Как нас найти</h2>
+        <h2 hidden="true">Как нас найти</h2>
         <img src="https://via.placeholder.com/1440x416" alt="карта">
         <div class="map-adds">
             <h2>NЁRDS DESIGN STUDIO</h2>
