--- a/2page.html
+++ b/2page.html
@@ -2,42 +2,49 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>нёрдс - Магазин готовых шаблонов</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>нёрдс</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="secondpage">
     <header>
       <nav>
-        <a href="#">Nerds</a>
-        <ul>
-         <li><a href="blank.html">студия</a></li>
-         <li><a href="blank.html">клиенты</a></li>
-         <li><a>магазин</a></li>
-         <li><a href="blank.html">контанты</a></li>
+        <a hidden="true" href="blank.html" class="header-logo">Nerds</a>
+        <ul class="main-navigation">
+         <li"><a class="nav-list" href="#">студия</a></li>
+         <li><a class="nav-list" href="#">клиенты</a></li>
+         <li><a class="nav-list" href="2page.html">магазин</a></li>
+         <li><a class="nav-list" href="#">контанты</a></li>
+         <li class="busket"><a href="#" class="nav-list">корзина</a></li>
         </ul>
-        <a href="#">корзина</a>
       </nav>
     </header>
    <main>
-      <h1>Магазин готовых шаблонов</h1>
+     <div class="templates-shop">
+       <h1>Магазин готовых шаблонов</h1>
+     </div>
+
      <section>
        <h2>Фильтр товаров</h2>
      </section>
 
-     <section>
+     <section class="templates-list">
        <h2>список шаблонов</h2>
        <ul>
-         <li>
-             <img src="https://via.placeholder.com/360x576" width="360" height="576" alt="sedona">
-             <div>
+         <li class="list-item">
+            <div class="sedona">
+              <img src="https://via.placeholder.com/360x576" width="360" height="576" alt="sedona" hidden="true">
+              <div>
                <h3><a href="#">Седона</a></h3>
                <p>Информационный сайт для туристов</p>
                <button type="button">9 900</button>
-             </div>
+              </div>
+            </div>
          </li>
          <li>
-            <img src="https://via.placeholder.com/360x576" width="360" height="576" alt="pink">
+           <div>
+             <img src="https://via.placeholder.com/360x576" width="360" height="576" alt="pink">
+            </div>
          </li>
          <li>
             <img src="https://via.placeholder.com/364x582" width="364" height="582" alt="borodinsky">
@@ -73,23 +80,25 @@
     </main>
 
     <footer>
-      <img src="https://via.placeholder.com/1440x416" alt="карта">
-      <div>
-         <h2>NЁRDS DESIGN STUDIO</h2>
-         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
-         <button type="button">Напишите нам</button>
-      </div>
-      <div>
-        <ul>
+      <section>
+        <h2 hidden="true">Как нас найти</h2>
+        <img src="https://via.placeholder.com/1440x416" alt="карта">
+        <div class="map-adds">
+            <h2>NЁRDS DESIGN STUDIO</h2>
+            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> <br>тел. +7 (812) 275-75-75</p>
+            <button type="button">Напишите нам</button>
+        </div>
+      </section>
+      <ul>
           <li><a href=""></a>Вконтакте</li>
           <li><a href=""></a>Facebook</li>
           <li><a href=""></a>инстаграм</li>
-        </ul>
-      </div>
-      <div>
-       <strong>Давайти дружить, это выгодно!</strong>
+      </ul>
+     <div>
+       <strong class="str">Давайти дружить, это выгодно!</strong>
        <p>скидка 10% для друзей из социальных сетей</p>
-      </div>
+    </div>
+   </footer>
     </footer>
   </body>
 </html>
