--- a/index.html
+++ b/index.html
@@ -21,22 +21,24 @@
     </header>
     <main>
       <h1 hidden="true">Дизайн студия Nerds</h1>
-       <section class="slide">
-        <h2>Узнать больше</h2>
-        <ul>
-          <li>
-           <h3>Долго, Дорого, скрупулёзно.</h3>
-           <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-            <a>Узнать больше</a>
-           <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="Долго, Дорого, скрупулёзно">
-          </li>
-          <li>
+      <section>
+         <div class="slides">
+           <h2>Узнать больше</h2>
+           <ul>
+             <li>
+               <h3>Долго, Дорого, скрупулёзно.</h3>
+               <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+                <a>Узнать больше</a>
+                <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="Долго, Дорого, скрупулёзно">
+             </li>
+             <li>
 
-          </li>
-          <li>
+             </li>
+             <li>
 
-          </li>
-       </ul>
+             </li>
+           </ul>
+         </div>
       </section>
 
       <section class="services">
@@ -46,19 +48,19 @@
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
            <h3>Веб-сайты</h3>
            <p>Мир никогда не будет прежним после того как увидишь наш сайт</p>
-           <a class="a-btn btn1" href="#">Заказать</a>
+           <a class="a-btn a-btn1--green" href="#">Заказать</a>
          </li>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
            <h3>Приложения</h3>
            <p>поеорите топ-10 приложений в App store и Google play</p>
-           <a class="a-btn btn2" href="#">Заказать</a>
+           <a class="a-btn a-btn--red" href="#">Заказать</a>
          </li>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Презентации">
            <h3 >Презентации</h3>
            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-           <a class="a-btn btn3" href="#">Заказать</a>
+           <a class="a-btn a-btn--yellow" href="#">Заказать</a>
          </li>
        </ul>
       </section>
@@ -107,7 +109,7 @@
         <img src="https://via.placeholder.com/1440x416" alt="карта">
         <div class="map-adds">
             <h2>NЁRDS DESIGN STUDIO</h2>
-            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>тел. +7 (812) 275-75-75</p>
+            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> <br>тел. +7 (812) 275-75-75</p>
             <button type="button">Напишите нам</button>
         </div>
       </section>
@@ -117,7 +119,7 @@
           <li><a href=""></a>инстаграм</li>
       </ul>
      <div>
-       <strong>Давайти дружить, это выгодно!</strong>
+       <strong class="str">Давайти дружить, это выгодно!</strong>
        <p>скидка 10% для друзей из социальных сетей</p>
     </div>
    </footer>
