--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
              <li>
                <h3>Долго, Дорого, скрупулёзно.</h3>
                <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-                <a>Узнать больше</a>
+               <a>Узнать больше</a>
                 <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="Долго, Дорого, скрупулёзно">
              </li>
              <li>
-
+               <h2>Любим математику как никто другой</h2>
+               <p>Никакого креатива, только математические формулы для расчет идеальных пропорций</p>
+               <a>Узнать больше</a>
+               <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="любим математику как никто другой">
              </li>
              <li>
-
+               <h2>Только ночь, только хардкор</h2>
+               <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+               <a>Узнать больше</a>
+               <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="Только ночь, только хардкор">
              </li>
            </ul>
          </div>
@@ -48,26 +54,26 @@
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
            <h3>Веб-сайты</h3>
            <p>Мир никогда не будет прежним после того как увидишь наш сайт</p>
-           <a class="a-btn a-btn1--green" href="#">Заказать</a>
+           <a class="a-btn a-btn--green" href="#"><p>Заказать</p></a>
          </li>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
            <h3>Приложения</h3>
            <p>поеорите топ-10 приложений в App store и Google play</p>
-           <a class="a-btn a-btn--red" href="#">Заказать</a>
+           <a class="a-btn a-btn--red" href="#"><p>Заказать</p></a>
          </li>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Презентации">
            <h3 >Презентации</h3>
            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-           <a class="a-btn a-btn--yellow" href="#">Заказать</a>
+           <a class="a-btn a-btn--yellow" href="#"><p>Заказать</p></a>
          </li>
        </ul>
       </section>
       <section class="information">
        <h2>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h2>
-       <p class="p-b">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
-       <p>Выполнем заказы на разаработку:</p>
+       <p >Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
+       <p class="bold-text">Выполнем заказы на разаработку:</p>
        <ul>
          <li class="inf-list">Веб-сайтов любой сложности</li>
          <li class="inf-list">Мобильных предложений для IOS и Android</li>
