--- a/2page.html
+++ b/2page.html
@@ -32,38 +32,62 @@
        <h2>список шаблонов</h2>
        <ul>
          <li class="list-item">
-            <div class="sedona">
-              <img src="https://via.placeholder.com/360x576" width="360" height="576" alt="sedona" hidden="true">
-              <div>
-               <h3><a href="#">Седона</a></h3>
-               <p>Информационный сайт для туристов</p>
-               <button type="button">9 900</button>
-              </div>
+            <img src="https://via.placeholder.com/360x576" alt="sedona" hidden="true">
+            <div class="pp-text">
+              <h3>Седона</h3>
+              <p>Информационный сайт  <br> для туристов</p>
+              <a href="#">9 900₽</a>
+             </div>
+         </li>
+         <li class="list-item">
+             <img alt="pink">
+             <div class="pp-text">
+              <h3>pink app</h3>
+              <p>Продуктовый лендинг <br> приложения для IOS и Android</p>
+              <a href="#">9 900₽</a>
+             </div>
+         </li>
+         <li class="list-item">
+            <img  alt="borodinsky">
+            <div class="pp-text">
+               <h3>barbershop</h3>
+               <p>Сайт салона красоты.<br>Для мужчин, да.</p>
+               <a href="#">9 900₽</a>
+             </div>
+         </li>
+         <li class="list-item">
+            <img  alt="mishka">
+            <div class="pp-text">
+              <h3>mishka</h3>
+              <p>Интернет-магазин <br>вязаных игрушек</p>
+              <a href="#">9 900₽</a>
             </div>
+
          </li>
-         <li>
-           <div>
-             <img src="https://via.placeholder.com/360x576" width="360" height="576" alt="pink">
-            </div>
+         <li class="list-item">
+           <img  alt="aplus">
+           <div class="pp-text">
+            <h3>a plus</h3>
+            <p>Лендинг курсов <br>повышения квалификации</p>
+            <a href="#">9 900₽</a>
+          </div>
          </li>
-         <li>
-            <img src="https://via.placeholder.com/364x582" width="364" height="582" alt="borodinsky">
-         </li>
-         <li>
-            <img src="https://via.placeholder.com/362x580" width="362" height="580" alt="mishka">
-         </li>
-         <li>
-           <img src="https://via.placeholder.com/364x582" width="364" height="582" alt="aplus">
-         </li>
-         <li>
-           <img src="https://via.placeholder.com/362x580" width="362" height="580" alt="kvast">
+
+         <li class="list-item">
+           <img  alt="kvast">
+           <div class="pp-text">
+            <h3>кваст</h3>
+            <p>Промо-сайт производителя <br> крафтового кваса</p>
+            <a href="#">9 900₽</a>
+          </div>
+
          </li>
        </ul>
 
 
-       <ul>
-         <li>
-           <a>1</a>
+       <ul class="pagination">
+         <li class="one">
+           <a href="#">1</a>
          </li>
          <li>
            <a href="#">2</a>
@@ -71,7 +95,7 @@
          <li>
            <a href="#">3</a>
          </li>
-         <li>
+         <li class="next">
            <a href="#">следующая</a>
          </li>
         </ul>
@@ -89,16 +113,15 @@
             <button type="button">Напишите нам</button>
         </div>
       </section>
-      <ul>
-          <li><a href=""></a>Вконтакте</li>
-          <li><a href=""></a>Facebook</li>
-          <li><a href=""></a>инстаграм</li>
+      <ul class="s-network">
+          <li class=""><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
       </ul>
      <div>
        <strong class="str">Давайти дружить, это выгодно!</strong>
        <p>скидка 10% для друзей из социальных сетей</p>
     </div>
    </footer>
-    </footer>
   </body>
 </html>
