--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
            <h3>Веб-сайты</h3>
            <p>Мир никогда не будет прежним после того как увидишь наш сайт</p>
-           <a class="a-btn a-btn--green" href="#"><p>Заказать</p></a>
+           <a class="a-btn a-btn--green" href="#">Заказать</a>
          </li>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
@@ -119,10 +119,10 @@
             <button type="button">Напишите нам</button>
         </div>
       </section>
-      <ul>
-          <li><a href=""></a>Вконтакте</li>
-          <li><a href=""></a>Facebook</li>
-          <li><a href=""></a>инстаграм</li>
+      <ul class="s-network">
+          <li class=""><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
       </ul>
      <div>
        <strong class="str">Давайти дружить, это выгодно!</strong>
