--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <main>
-      <h1 hidden="true">Дизайн студия Nerds</h1>
+      <h1 class="visually-hidden">Дизайн студия Nerds</h1>
       <section>
          <div class="slides">
            <h2>Узнать больше</h2>
@@ -48,31 +48,31 @@
       </section>
 
       <section class="services">
-       <h2 hidden="true">Услуги</h2>
+       <h2 class="visually-hidden">Услуги</h2>
        <ul>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
            <h3>Веб-сайты</h3>
-           <p>Мир никогда не будет прежним после того как увидишь наш сайт</p>
+           <p>Мир никогда не будет прежним б<br>после того как увидишь наш сайт</p>
            <a class="a-btn a-btn--green" href="#">Заказать</a>
          </li>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
            <h3>Приложения</h3>
-           <p>поеорите топ-10 приложений в App store и Google play</p>
-           <a class="a-btn a-btn--red" href="#"><p>Заказать</p></a>
+           <p>поеорите топ-10 приложений в <br>App store и Google play</p>
+           <a class="a-btn a-btn--red" href="#">Заказать</a>
          </li>
          <li class="services-item">
            <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Презентации">
            <h3 >Презентации</h3>
-           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-           <a class="a-btn a-btn--yellow" href="#"><p>Заказать</p></a>
+           <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
+           <a class="a-btn a-btn--yellow" href="#">Заказать.</a>
          </li>
        </ul>
       </section>
       <section class="information">
        <h2>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h2>
-       <p >Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
+       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
        <p class="bold-text">Выполнем заказы на разаработку:</p>
        <ul>
          <li class="inf-list">Веб-сайтов любой сложности</li>
@@ -81,7 +81,7 @@
        </ul>
       </section>
       <aside class="achievement">
-       <h2 hidden="true"> Достижения </h2>
+       <h2 class="visually-hidden" > Достижения </h2>
        <img src="https://via.placeholder.com/300x146" width="360" height="208" alt="nerds">
        <h3>с 2004 года Любим точность во всем:</h3>
        <ul>
@@ -100,7 +100,7 @@
        </ul>
       </aside>
       <section>
-       <h2 hidden="true">Спонсоры</h2>
+       <h2 class="visually-hidden">Спонсоры</h2>
        <ul>
          <li><img src="https://via.placeholder.com/199x68" width="199" height="68" alt="html academy"></li>
          <li> <img src="https://via.placeholder.com/209x90" width="209" height="90" alt="borodinsky"></li>
@@ -111,7 +111,7 @@
     </main>
     <footer>
       <section>
-        <h2 hidden="true">Как нас найти</h2>
+        <h2 class="visually-hidden">Как нас найти</h2>
         <img src="https://via.placeholder.com/1440x416" alt="карта">
         <div class="map-adds">
             <h2>NЁRDS DESIGN STUDIO</h2>
@@ -120,9 +120,27 @@
         </div>
       </section>
       <ul class="s-network">
-          <li class=""><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+        <li>
+          <a href="">
+            <div class="s-network-list">
+              <img class="icon icon-vk" src="img/vk-icon.png" width="26" height="15">
+            </div>
+          </a>
+        </li>
+        <li>
+         <a href="">
+           <div class="s-network-list">
+             <img class="icon icon-fb" src="img/fb-icon.png" width="12" height="22">
+           </div>
+        </a>
+        </li>
+        <li>
+          <a href="">
+            <div class="s-network-list">
+             <img class="icon icon-inst" src="img/insta-icon.png" width="21" height="21">
+            </div>
+          </a>
+        </li>
       </ul>
      <div>
        <strong class="str">Давайти дружить, это выгодно!</strong>
