--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
  <body>
     <header>
       <nav>
-        <a hidden="true" href="blank.html" class="header-logo">Nerds</a>
+        <a class="visually-hidden" href="blank.html" class="header-logo">
+          <img src="img/nerds-logo.svg" alt="nerds">
+        </a>
         <ul class="main-navigation">
          <li"><a class="nav-list" href="#">студия</a></li>
          <li><a class="nav-list" href="#">клиенты</a></li>
@@ -25,20 +27,20 @@
          <div class="slides">
            <h2>Узнать больше</h2>
            <ul>
-             <li>
-               <h3>Долго, Дорого, скрупулёзно.</h3>
+             <li class="slide">
+               <h3>Долго, Дорого, <br>скрупулёзно.</h3>
                <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
                <a>Узнать больше</a>
                 <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="Долго, Дорого, скрупулёзно">
              </li>
-             <li>
-               <h2>Любим математику как никто другой</h2>
+             <li class="slide">
+               <h3>Любим математику <br>как никто другой</h2>
                <p>Никакого креатива, только математические формулы для расчет идеальных пропорций</p>
                <a>Узнать больше</a>
                <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="любим математику как никто другой">
              </li>
-             <li>
-               <h2>Только ночь, только хардкор</h2>
+             <li class="slide">
+               <h3>Только ночь, <br>только хардкор</h2>
                <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
                <a>Узнать больше</a>
                <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="Только ночь, только хардкор">
@@ -51,22 +53,22 @@
        <h2 class="visually-hidden">Услуги</h2>
        <ul>
          <li class="services-item">
-           <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Веб-сайты">
+           <img src="img/notebook.jpg" width="300" height="146" alt="Веб-сайты">
            <h3>Веб-сайты</h3>
            <p>Мир никогда не будет прежним б<br>после того как увидишь наш сайт</p>
            <a class="a-btn a-btn--green" href="#">Заказать</a>
          </li>
          <li class="services-item">
-           <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Приложения">
+           <img src="img/phone.jpg" width="300" height="146" alt="Приложения">
            <h3>Приложения</h3>
            <p>поеорите топ-10 приложений в <br>App store и Google play</p>
            <a class="a-btn a-btn--red" href="#">Заказать</a>
          </li>
          <li class="services-item">
-           <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="Презентации">
+           <img src="img/presentation.jpg" width="300" height="146" alt="Презентации">
            <h3 >Презентации</h3>
            <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
-           <a class="a-btn a-btn--yellow" href="#">Заказать.</a>
+           <a class="a-btn a-btn--yellow" href="#">Заказать</a>
          </li>
        </ul>
       </section>
@@ -82,7 +84,7 @@
       </section>
       <aside class="achievement">
        <h2 class="visually-hidden" > Достижения </h2>
-       <img src="https://via.placeholder.com/300x146" width="360" height="208" alt="nerds">
+       <img src="img/nerds-illustration 1.png" width="360" height="208" alt="nerds">
        <h3>с 2004 года Любим точность во всем:</h3>
        <ul>
          <li class="achievement-list">
@@ -102,10 +104,26 @@
       <section>
        <h2 class="visually-hidden">Спонсоры</h2>
        <ul>
-         <li><img src="https://via.placeholder.com/199x68" width="199" height="68" alt="html academy"></li>
-         <li> <img src="https://via.placeholder.com/209x90" width="209" height="90" alt="borodinsky"></li>
-         <li> <img src="https://via.placeholder.com/185x52" width="185" height="52" alt="pink"></li>
-         <li> <img src="https://via.placeholder.com/173x84" width="173" height="84" alt="mishka"></li>
+         <li class="sponsors">
+            <a href="#">
+             <img src="img/html-academy.svg" width="199" height="68" alt="html academy">
+            </a>
+          </li>
+         <li class="sponsors">
+            <a href="#">
+              <img src="img/borodinsky.svg" width="209" height="90" alt="borodinsky">
+            </a>
+          </li>
+         <li class="sponsors">
+           <a href="#">
+             <img src="img/pink.svg" width="185" height="52" alt="pink">
+           </a>
+          </li>
+          <li class="sponsors">
+           <a href="#">
+             <img src="img/mishka.svg" width="173" height="84" alt="mishka">
+           </a>
+          </li>
        </ul>
       </section>
     </main>
