изображения на главной странице

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body>
     <header>
       <nav>
-        <a class="visually-hidden" href="blank.html" class="header-logo">
+        <a href="blank.html" class="header-logo">
           <img src="img/nerds-logo.svg" alt="nerds">
         </a>
         <ul class="main-navigation">
@@ -17,7 +17,7 @@
          <li><a class="nav-list" href="#">клиенты</a></li>
          <li><a class="nav-list" href="2page.html">магазин</a></li>
          <li><a class="nav-list" href="#">контанты</a></li>
-         <li class="busket"><a href="#" class="nav-list">корзина</a></li>
+         <li class="busket"><a href="#" class="nav-list"><img src="img/cart-icon.svg">корзина</a></li>
         </ul>
       </nav>
     </header>
@@ -31,19 +31,19 @@
                <h3>Долго, Дорого, <br>скрупулёзно.</h3>
                <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
                <a>Узнать больше</a>
-                <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="Долго, Дорого, скрупулёзно">
+                <img src="img/nerds-index-slide1 1.png" width="760" height="431" alt="Долго, Дорого, скрупулёзно">
              </li>
              <li class="slide">
                <h3>Любим математику <br>как никто другой</h2>
                <p>Никакого креатива, только математические формулы для расчет идеальных пропорций</p>
                <a>Узнать больше</a>
-               <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="любим математику как никто другой">
+               <img src="img/nerds-index-slide2 1.png" width="760" height="431" alt="любим математику как никто другой">
              </li>
              <li class="slide">
                <h3>Только ночь, <br>только хардкор</h2>
                <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
                <a>Узнать больше</a>
-               <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="Только ночь, только хардкор">
+               <img src="img/nerds-index-slide3 1.png" width="760" height="431" alt="Только ночь, только хардкор">
              </li>
            </ul>
          </div>
@@ -130,7 +130,7 @@
     <footer>
       <section>
         <h2 class="visually-hidden">Как нас найти</h2>
-        <img src="https://via.placeholder.com/1440x416" alt="карта">
+        <img src="img/map 1.png" alt="карта">
         <div class="map-adds">
             <h2>NЁRDS DESIGN STUDIO</h2>
             <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> <br>тел. +7 (812) 275-75-75</p>
@@ -141,21 +141,21 @@
         <li>
           <a href="">
             <div class="s-network-list">
-              <img class="icon icon-vk" src="img/vk-icon.png" width="26" height="15">
+              <img class="icon icon-vk" src="img/vk-icon.svg" width="26" height="15">
             </div>
           </a>
         </li>
         <li>
          <a href="">
            <div class="s-network-list">
-             <img class="icon icon-fb" src="img/fb-icon.png" width="12" height="22">
+             <img class="icon icon-fb" src="img/fb-icon.svg" width="12" height="22">
            </div>
         </a>
         </li>
         <li>
           <a href="">
             <div class="s-network-list">
-             <img class="icon icon-inst" src="img/insta-icon.png" width="21" height="21">
+             <img class="icon icon-inst" src="img/insta-icon.svg" width="21" height="21">
             </div>
           </a>
         </li>
