--- a/2page.html
+++ b/2page.html
@@ -9,13 +9,15 @@
   <body class="secondpage">
     <header>
       <nav>
-        <a hidden="true" href="blank.html" class="header-logo">Nerds</a>
+        <a href="blank.html" class="header-logo">
+          <img src="img/nerds-logo.svg" alt="nerds">
+        </a>
         <ul class="main-navigation">
          <li"><a class="nav-list" href="#">студия</a></li>
          <li><a class="nav-list" href="#">клиенты</a></li>
          <li><a class="nav-list" href="2page.html">магазин</a></li>
          <li><a class="nav-list" href="#">контанты</a></li>
-         <li class="busket"><a href="#" class="nav-list">корзина</a></li>
+         <li class="busket"><a href="#" class="nav-list"><img src="img/cart-icon.svg">корзина</a></li>
         </ul>
       </nav>
     </header>
@@ -32,7 +34,7 @@
        <h2>список шаблонов</h2>
        <ul>
          <li class="list-item">
-            <img src="https://via.placeholder.com/360x576" alt="sedona" hidden="true">
+            <img src="img/img-sedona 1.jpg" alt="sedona" hidden="true">
             <div class="pp-text">
               <h3>Седона</h3>
               <p>Информационный сайт  <br> для туристов</p>
@@ -40,7 +42,7 @@
              </div>
          </li>
          <li class="list-item">
-             <img alt="pink">
+             <img src="img/img-pink 1.jpg" alt="pink">
              <div class="pp-text">
               <h3>pink app</h3>
               <p>Продуктовый лендинг <br> приложения для IOS и Android</p>
@@ -48,7 +50,7 @@
              </div>
          </li>
          <li class="list-item">
-            <img  alt="borodinsky">
+            <img src="img/img-barbershop 1.jpg" alt="borodinsky">
             <div class="pp-text">
                <h3>barbershop</h3>
                <p>Сайт салона красоты.<br>Для мужчин, да.</p>
@@ -56,7 +58,7 @@
              </div>
          </li>
          <li class="list-item">
-            <img  alt="mishka">
+            <img src="img/img-mishka 1.jpg" alt="mishka">
             <div class="pp-text">
               <h3>mishka</h3>
               <p>Интернет-магазин <br>вязаных игрушек</p>
@@ -65,7 +67,7 @@
 
          </li>
          <li class="list-item">
-           <img  alt="aplus">
+           <img src="img/img-aplus 1.jpg" alt="aplus">
            <div class="pp-text">
             <h3>a plus</h3>
             <p>Лендинг курсов <br>повышения квалификации</p>
@@ -74,7 +76,7 @@
          </li>
 
          <li class="list-item">
-           <img  alt="kvast">
+           <img  src="img/img-kvast 1.jpg" alt="kvast">
            <div class="pp-text">
             <h3>кваст</h3>
             <p>Промо-сайт производителя <br> крафтового кваса</p>
@@ -105,8 +107,8 @@
 
     <footer>
       <section>
-        <h2 hidden="true">Как нас найти</h2>
-        <img src="https://via.placeholder.com/1440x416" alt="карта">
+        <h2 class="visually-hidden">Как нас найти</h2>
+        <img src="img/map 1.png" alt="карта">
         <div class="map-adds">
             <h2>NЁRDS DESIGN STUDIO</h2>
             <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> <br>тел. +7 (812) 275-75-75</p>
@@ -114,9 +116,27 @@
         </div>
       </section>
       <ul class="s-network">
-          <li class=""><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+        <li>
+          <a href="">
+            <div class="s-network-list">
+              <img class="icon icon-vk" src="img/vk-icon.svg" width="26" height="15">
+            </div>
+          </a>
+        </li>
+        <li>
+         <a href="">
+           <div class="s-network-list">
+             <img class="icon icon-fb" src="img/fb-icon.svg" width="12" height="22">
+           </div>
+        </a>
+        </li>
+        <li>
+          <a href="">
+            <div class="s-network-list">
+             <img class="icon icon-inst" src="img/insta-icon.svg" width="21" height="21">
+            </div>
+          </a>
+        </li>
       </ul>
      <div>
        <strong class="str">Давайти дружить, это выгодно!</strong>
