--- a/2page.html
+++ b/2page.html
@@ -9,7 +9,7 @@
   <body class="secondpage">
     <header>
       <nav>
-        <a href="blank.html" class="header-logo">
+        <a href="index.html" class="header-logo">
           <img src="img/nerds-logo.svg" alt="nerds">
         </a>
         <ul class="main-navigation">
