--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body>
     <header>
       <nav>
-        <a href="blank.html" class="header-logo">
+        <a href="index.html" class="header-logo">
           <img src="img/nerds-logo.svg" alt="nerds">
         </a>
         <ul class="main-navigation">
@@ -56,13 +56,13 @@
            <img src="img/notebook.jpg" width="300" height="146" alt="Веб-сайты">
            <h3>Веб-сайты</h3>
            <p>Мир никогда не будет прежним б<br>после того как увидишь наш сайт</p>
-           <a class="a-btn a-btn--green" href="#">Заказать</a>
+           <a class="a-btn a-btn--red" href="#">Заказать</a>
          </li>
          <li class="services-item">
            <img src="img/phone.jpg" width="300" height="146" alt="Приложения">
            <h3>Приложения</h3>
            <p>поеорите топ-10 приложений в <br>App store и Google play</p>
-           <a class="a-btn a-btn--red" href="#">Заказать</a>
+           <a class="a-btn a-btn--green" href="#">Заказать</a>
          </li>
          <li class="services-item">
            <img src="img/presentation.jpg" width="300" height="146" alt="Презентации">
