--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
   </head>
  <body>
     <header>
-      <nav>
+      <nav class="main-navigation">
         <a href="index.html" class="header-logo">
           <img src="img/nerds-logo.svg" alt="nerds">
         </a>
-        <ul class="main-navigation">
+        <ul>
          <li"><a class="nav-list" href="#">студия</a></li>
          <li><a class="nav-list" href="#">клиенты</a></li>
          <li><a class="nav-list" href="2page.html">магазин</a></li>
          <li><a class="nav-list" href="#">контанты</a></li>
-         <li class="busket"><a href="#" class="nav-list"><img src="img/cart-icon.svg">корзина</a></li>
         </ul>
+        <a href="#" class="nav-list basket"><img src="img/cart-icon.svg" height="15" width="15">корзина</a>
       </nav>
     </header>
     <main>
       <h1 class="visually-hidden">Дизайн студия Nerds</h1>
       <section>
-         <div class="slides">
+         <div class="slides visually-hidden">
            <h2>Узнать больше</h2>
            <ul>
              <li class="slide">
